[tool.poetry]
name = "audio-processing"
version = "0.1.0"
description = ""
authors = ["Daniel Lee <dannylee1020@gmail.com>"]
readme = "README.md"
packages = [{include = "audio-processing"}]

[tool.poetry.dependencies]
python = "^3.8"
pydub = "^0.25.1"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
process-audio = 'audio-processing.main:run'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
